k8s/overlays/dev/patches/dev-resources-fluxpay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluxpay-engine
  namespace: moalog
spec:
  template:
    spec:
      containers:
        - name: fluxpay-engine
          resources:
            requests:
              cpu: 128m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
