k8s/overlays/dev/patches/dev-resources-rate-limiter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-limiter
  namespace: moalog
spec:
  template:
    spec:
      containers:
        - name: rate-limiter
          resources:
            requests:
              cpu: 128m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
