k8s/overlays/dev/patches/dev-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moalog-server
  namespace: moalog
spec:
  template:
    spec:
      containers:
        - name: moalog-server
          resources:
            requests:
              cpu: 64m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
