k8s/overlays/dev/patches/reduce-replicas-fluxpay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluxpay-engine
  namespace: moalog
spec:
  replicas: 1
