k8s/overlays/dev/patches/reduce-replicas-rate-limiter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-limiter
  namespace: moalog
spec:
  replicas: 1
