k8s/overlays/dev/patches/reduce-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moalog-server
  namespace: moalog
spec:
  replicas: 1
